// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Container snapshots answers renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img />
  </div>
</div>
`;

exports[`Image Container snapshots canDrag renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img />
  </div>
</div>
`;

exports[`Image Container snapshots draggingElement renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img />
  </div>
</div>
`;

exports[`Image Container snapshots image renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img
      height="0"
      src="https://picsum.photos/id/102/200/300"
      width="0"
    />
  </div>
</div>
`;

exports[`Image Container snapshots responseContainers renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img />
    <div
      class="css-266qi9"
      style="padding: 10px;"
    />
    <div
      class="css-266qi9"
      style="padding: 10px;"
    />
  </div>
</div>
`;

exports[`Image Container snapshots showDashedBorder renders 1`] = `
<div>
  <div
    class="css-1jn6ah9"
  >
    <img />
  </div>
</div>
`;
